Site's navigation finished - Start of responsiveness

--- a/src/footer.html
+++ b/src/footer.html
@@ -1,7 +1,34 @@
-<footer>
-    <div class="footer-social">
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-instagram"></i></a>
+<footer class="footer">
+    <div class="footer-content">
+        <!-- Left: Contact Info -->
+        <div class="footer-contact">
+            <p>Contacto: info@kef.org</p>
+            <p>Teléfono: +57 123 456 7890</p>
+        </div>
+
+        <!-- Center: Copyrights -->
+        <div class="footer-copyright">
+            <p>&copy; 2024 KEF. Todos los derechos reservados.</p>
+        </div>
+
+        <!-- Right: Social Media Icons -->
+        <div class="footer-social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="assets/icons/facebook-icon.svg" alt="Facebook">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="assets/icons/x-icon.svg" alt="Twitter">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="assets/icons/instagram-icon.svg" alt="Instagram">
+            </a>
+            <a href="https://youtube.com" target="_blank">
+                <img src="assets/icons/youtube-icon.svg" alt="YouTube">
+            </a>
+            <a href="https://tiktok.com" target="_blank">
+                <img src="assets/icons/tiktok-icon.svg" alt="YouTube">
+            </a>
+        </div>
     </div>
 </footer>
+
