--- a/src/activismo.html
+++ b/src/activismo.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activismo</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="includes.js" defer></script>
-
+    <script src="js/includes.js" defer></script>
+    <script src="js/main.js" defer></script>
 </head>
 <body>
 
@@ -14,28 +14,44 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <section class="hero">
-        <h1>Activismo</h1>
-        <p>Engage in our social activism programs to drive impactful change.</p>
+    <section class="hero-activismo">
+        <div class="hero-content">
+            <div class="hero-text">
+                <h1>Activismo</h1>
+                <p>Únete a nuestros programas de activismo social para impulsar un cambio significativo.</p>
+                <a href="contact-us.html" class="cta-button-activismo">Contáctanos</a>
+            </div>
+            <div class="hero-image">
+                <img src="assets/Landingpage.svg" alt="Activismo Image">
+            </div>
+        </div>
     </section>
 
     <!-- Interventions Section -->
-    <section class="interventions">
-        <h2>Intervenciones</h2>
-        <div class="interventions-timeline">
-            <div class="timeline-item">
-                <span>8M - Cali/2020</span>
-                <p>Description of the intervention.</p>
+    <section class="interventions interventions-activismo" id="interventions-list">
+        <h2 class="interventions-title">Intervenciones</h2>
+        <!-- Las intervenciones se renderizarán aquí mediante JavaScript -->
+        <div id="interventions-container"></div>
+    </section>
+
+    
+    <!-- Community and Allies Section -->
+    <section class="allies">
+        <h2>Comunidad y Red de Aliadas</h2>
+        <div class="allies-grid">
+            <div class="ally-card">
+                <img src="ally1.jpg" alt="Aliada 1">
+                <h3>Aliada</h3>
+                <p>Descripción breve de la aliada y su rol en la comunidad.</p>
             </div>
-            <!-- Add more timeline items -->
+            <!-- Agrega más tarjetas de aliadas según sea necesario -->
         </div>
     </section>
-    
-    <!-- Blog CTA -->
+
+    <!-- Blog CTA Section -->
     <section class="blog-cta">
-        <h2>Learn More About Activismo</h2>
-        <p>Check out our blog posts on Activismo to stay updated.</p>
-        <a href="blog.html?topic=activismo" class="cta-button">Read Activismo Blog</a>
+        <h2>Descubre Nuestro Espacio de Reflexión</h2>
+        <a href="blog.html?topic=activismo" class="cta-button">Blog KEF</a>
     </section>
 
     <!-- Footer Section -->
