--- a/src/blog.html
+++ b/src/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="includes.js" defer></script>
+    <script src="js/includes.js" defer></script>
 
 </head>
 <body>
