--- a/src/consumo.html
+++ b/src/consumo.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consumo Local y Consciente</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="includes.js" defer></script>
+    <script src="js/main.js" defer></script>
+    <script src="js/includes.js" defer></script>
 
 </head>
 <body>
@@ -14,21 +15,24 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <section class="hero">
-        <h1>Consumo Local y Consciente</h1>
-        <p>Promoting sustainable and conscious local consumption.</p>
+    <section class="hero-consumo">
+        <div class="hero-content">
+            <div class="hero-text">
+                <h1>Consumo</h1>
+                <p>Únete a nuestros programas de consumo para repensar nuestros hábitos diarios.</p>
+                <a href="contact-us.html" class="cta-button-consumo">Contáctanos</a>
+            </div>
+            <div class="hero-image">
+                <img src="assets/Landingpage.svg" alt="Consumo Image">
+            </div>
+        </div>
     </section>
 
     <!-- Interventions Section -->
-    <section class="interventions">
-        <h2>Initiatives</h2>
-        <div class="interventions-timeline">
-            <div class="timeline-item">
-                <span>2022 - Local Market Initiative</span>
-                <p>Description of the initiative.</p>
-            </div>
-            <!-- Add more timeline items -->
-        </div>
+    <section class="interventions interventions-consumo" id="interventions-list">
+        <h2 class="interventions-title">Intervenciones</h2>
+        <!-- Las intervenciones se renderizarán aquí mediante JavaScript -->
+        <div id="interventions-container"></div>
     </section>
 
     <!-- Blog CTA -->
