--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="includes.js" defer></script>
+    <script src="js/includes.js" defer></script>
 
 </head>
 <body>
@@ -23,6 +23,9 @@
 
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
+
+            <label for="email">Teléfono</label>
+            <input type="phonenumber" id="phonenumber" name="phonenumber" required>
 
             <label for="message">Message</label>
             <textarea id="message" name="message" rows="5" required></textarea>
