--- a/src/header.html
+++ b/src/header.html
@@ -1,10 +1,26 @@
-<nav>
-    <div class="logo"><a href="index.html">KEF</a></div>
-    <ul class="nav-links">
-        <li><a href="#">Dona</a></li>
-        <li><a href="#">Súmate</a></li>
-        <li><a href="#">Visítanos</a></li>
-        <li><a href="/contact-us.html">Contáctanos</a></li>
-        <li><a href="#">Newsletter</a></li>
-    </ul>
-</nav>
+<header class="site-header">
+    <div class="header-content">
+        <!-- Left Section: Logo/Icon -->
+        <div class="header-left">
+            <a href="index.html">
+                <img src="assets/KEF-LOGO.png" alt="KEF Logo" class="logo">
+            </a>
+        </div>
+
+        <!-- Right Section: CTA Links -->
+        <div class="header-right">
+            <nav>
+                <ul class="header-nav">
+                    <li><a href="sumate.html">Sumate</a></li>
+                    <li><a href="visitanos.html">Visitanos</a></li>
+                    <li><a href="contact-us.html">Contactanos</a></li>
+                    <li><a href="intervenciones.html">No te lo pierdas</a></li>
+                    <li><a href="blog.html">Voz KEF</a></li>
+                    <li><a href="calendar.html">Lo que se viene</a></li>
+                    <li><a href="dona.html">Apoyanos</a></li>
+
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
