Responsiveness Implemented - Version 1.0

--- a/header.html
+++ b/header.html
@@ -1,26 +1,22 @@
 <header class="site-header">
-    <div class="header-content">
-        <!-- Left Section: Logo/Icon -->
-        <div class="header-left">
-            <a href="index.html">
-                <img src="assets/KEF-LOGO.png" alt="KEF Logo" class="logo">
-            </a>
-        </div>
-
-        <!-- Right Section: CTA Links -->
-        <div class="header-right">
-            <nav>
-                <ul class="header-nav">
-                    <li><a href="sumate.html">Sumate</a></li>
-                    <li><a href="visitanos.html">Visitanos</a></li>
-                    <li><a href="contact-us.html">Contactanos</a></li>
-                    <li><a href="intervenciones.html">No te lo pierdas</a></li>
-                    <li><a href="blog.html">Voz KEF</a></li>
-                    <li><a href="calendar.html">Lo que se viene</a></li>
-                    <li><a href="dona.html">Apoyanos</a></li>
-
-                </ul>
-            </nav>
-        </div>
-    </div>
+    <nav class="navbar">
+        <a href="index.html">
+            <img src="assets/KEF-LOGO.svg" alt="KEF Logo" class="logo">
+        </a>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="hamburger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <ul class="nav-links">
+            <li><a href="sumate.html">Sumate</a></li>
+            <li><a href="visitanos.html">Visitanos</a></li>
+            <li><a href="contact-us.html">Contactanos</a></li>
+            <li><a href="intervenciones.html">No te lo pierdas</a></li>
+            <li><a href="blog.html">Voz KEF</a></li>
+            <li><a href="calendar.html">Lo que se viene</a></li>
+            <li><a href="dona.html">Apoyanos</a></li>
+        </ul>
+    </nav>
 </header>
