--- a/sumate.html
+++ b/sumate.html
@@ -12,7 +12,7 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="hero-sumate">
         <h1>Súmate a Nuestra Causa</h1>
         <p>Únete a nuestras iniciativas para generar un impacto real en la sociedad.</p>
         <p>Trabajamos en tres líneas de acción: Activismo, Formación e Intervención, y Consumo Local y Consciente.</p>
