--- a/visitanos.html
+++ b/visitanos.html
@@ -12,9 +12,10 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="hero-visitanos">
         <h1>Visítanos</h1>
-        <p>Nuestra sede está ubicada en el corazón de Cali. Ven a conocernos y participa en nuestras actividades y eventos comunitarios.</p>
+        <p>Nuestra sede está ubicada en el corazón de Cali.</p>
+        <p>Ven a conocernos y participa en nuestras actividades y eventos comunitarios.</p>
     </section>
 
     <!-- Google Maps Embed -->
