--- a/about-us.html
+++ b/about-us.html
@@ -13,13 +13,13 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="about-section">
         <h1>Conócenos</h1>
         <p>Learn more about who we are and what we do at KEF.</p>
     </section>
 
     <!-- About Content -->
-    <section class="about-content">
+    <section class="about-text">
         <h2>Our Mission</h2>
         <p>KEF is committed to creating social change through activism, education, and sustainable practices. We aim to connect communities and foster a better tomorrow.</p>
 
