--- a/formacion.html
+++ b/formacion.html
@@ -39,7 +39,7 @@
     <section class="blog-cta">
         <h2>Saber más sobre Formación</h2>
         <p>Explora nuestras entradas sobre Formación para actualizarte.</p>
-        <a href="blog.html?topic=formacion" class="cta-button">Leer entradas del Blog para Formación </a>
+        <a href="blog.html?topic=formacion" class="cta-button-formacion">Leer entradas del Blog para Formación </a>
     </section>
 
     <!-- Footer Section -->
