--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <h2>Visítanos</h2>
             <p>Conoce nuestras instalaciones y descubre cómo puedes ser parte de nuestras actividades en persona.</p>
             <p>¡Te esperamos con los brazos abiertos!</p>
-            <a href="location.html" class="cta-button">Mostrar Ubicación</a>
+            <a href="/visitanos.html" class="cta-button">Mostrar Ubicación</a>
         </div>
     </section>
     <!-- Footer Section -->
