--- a/formacion.html
+++ b/formacion.html
@@ -20,7 +20,7 @@
             <div class="hero-text">
                 <h1>Formación</h1>
                 <p>Únete a nuestros programas de formación para conocer y explorar lo que nos mueve.</p>
-                <a href="contact-us.html" class="cta-button-formacion">Contáctanos</a>
+                <a href="contact-us.html" class="cta-button-formacion" style="margin: 1rem 0;"> Contáctanos</a>
             </div>
             <div class="hero-image">
                 <img src="assets/Landingpage.svg" alt="Formacion Image">
