--- a/activismo.html
+++ b/activismo.html
@@ -51,7 +51,7 @@
     <!-- Blog CTA Section -->
     <section class="blog-cta">
         <h2>Descubre Nuestro Espacio de Reflexión</h2>
-        <a href="blog.html?topic=activismo" class="cta-button">Blog KEF</a>
+        <a href="blog.html?topic=activismo" class="cta-button-activismo">Activismo en nuestro Blog</a>
     </section>
 
     <!-- Footer Section -->
