--- a/consumo.html
+++ b/consumo.html
@@ -39,7 +39,7 @@
     <section class="blog-cta">
         <h2>Learn More About Activismo</h2>
         <p>Check out our blog posts on Activismo to stay updated.</p>
-        <a href="blog.html?topic=consumo" class="cta-button">Read Consumo Blog</a>
+        <a href="blog.html?topic=consumo" class="cta-button-consumo">Visita nuestro Blog</a>
     </section>
     
 
