snap scrolling and full viewport implemented

--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Contáctanos</title>
     <link rel="stylesheet" href="styles.css">
     <script src="js/includes.js" defer></script>
 
@@ -15,7 +15,7 @@
     <!-- Contact Section -->
     <section class="contact-form">
         <h1>Contact Us</h1>
-        <p>We’d love to hear from you! Reach out to us with any inquiries or feedback.</p>
+        <p>We'd love to hear from you! Reach out to us with any inquiries or feedback.</p>
 
         <form action="/submit-form" method="POST">
             <label for="name">Name</label>
