--- a/dona.html
+++ b/dona.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dona - Clothing and Financial Contributions</title>
+    <title>Donaciones - Ropa y Contribuciones Financieras</title>
     <link rel="stylesheet" href="styles.css">
     <script src="js/includes.js" defer></script>
 </head>
