--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Voz KEF - Blog</title>
     <link rel="stylesheet" href="styles.css">
     <script src="js/includes.js" defer></script>
 
