all functionanilities fixed

--- a/contact-us.html
+++ b/contact-us.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contáctanos</title>
+    <title>KEF - Komunidad Eco Feminista</title>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="js/includes.js" defer></script>
-
 </head>
 <body>
 
     <div id="header-placeholder"></div>
 
+    <container class="contact-form-container">
     <!-- Contact Section -->
     <section class="contact-form">
         <h1>Contact Us</h1>
@@ -33,6 +34,7 @@
             <button type="submit">Send Message</button>
         </form>
     </section>
+    </container>
 
     <div id="footer-placeholder"></div>
 
