--- a/intervenciones.html
+++ b/intervenciones.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todas las Intervenciones</title>
+    <title>KEF - Komunidad Eco Feminista</title>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="js/includes.js" defer></script>
     <script src="js/main.js" defer></script>
@@ -13,7 +14,7 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="hero-intervenciones">
         <h1>Todas las Intervenciones</h1>
         <p>Explora todas nuestras intervenciones y usa los filtros para encontrar lo que buscas.</p>
     </section>
