--- a/sumate.html
+++ b/sumate.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Súmate - Únete a Nuestra Causa</title>
+    <title>KEF - Komunidad Eco Feminista</title>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="js/includes.js" defer></script>
 </head>
