colores y fuentes actualizadas

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                 
                         <!-- Right Side: Text Content -->
                         <div class="main-hero-text">
-                            <h1>¡KEF ES CONVERGENCIA!</h1>
-                            <p>Bienvenida al espacio KEF.</p> 
+                            <h1>¡BIENVENIDXS A KEF, la comunidad Ecofeminista</h1>
                             <p>Aquí encontrarás contenido educativo, múltiples iniciativas de la Colectiva Feminista de Colombia, y mucho, mucho más.</p>
                             <section class="main-hero-social-container">
                                 <div class="footer-social">
