--- a/index.html
+++ b/index.html
@@ -22,15 +22,10 @@
                 <!-- Hero Section -->
                 <section class="main-hero container">
                     <div class="main-hero-content">
-                        <!-- Left Side: Image or Design -->
-                        <div class="main-hero-image">
-                            <img src="assets/Landingpage.svg" alt="Hero Image">
-                        </div>
-                
                         <!-- Right Side: Text Content -->
                         <div class="main-hero-text">
-                            <h1>¡BIENVENIDXS A KEF, la comunidad Ecofeminista</h1>
-                            <p>Aquí encontrarás contenido educativo, múltiples iniciativas de la Colectiva Feminista de Colombia, y mucho, mucho más.</p>
+                            <h1>¡BIENVENIDXS A KEF</h1>
+                            <p>Somos una comunidad de mujeres que impulsa la equidad de género y la justicia ambiental en Cali y la región pacífica. Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario). ¡Así que súmate a esta historia! KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
                             <section class="main-hero-social-container">
                                 <div class="footer-social">
                                     <a href="https://facebook.com" target="_blank">
@@ -54,11 +49,18 @@
                                 </div>
                             </section>
                         </div>
+                        <section class="full-section-wrapper">
+                        <!-- Bottom: Image or Design -->
+                        <div class="main-hero-image">
+                            <img src="assets/womensmarch.jpg" alt="Hero Image">
+                        </div>
+                        </section>
+
                     </div>
                 </section>
 
                 <!-- Banner 1: After Hero (99CC33) -->
-                <div class="moving-banner" style="background-color: #99CC33;">
+                <div class="moving-banner" style="background-color: #8E44AD;">
                     <div class="banner-text">
                         <ul>
                             <li>AMIGAS</li>
@@ -91,7 +93,6 @@
                     <!-- Activismo Card -->
                     <a href="activismo.html">
                     <div class="card activismo">
-                            <img src="assets/Landingpage.svg" alt="Activismo Image" class="card-image">
                             <h3>Activismo</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
@@ -100,7 +101,6 @@
                     <!-- Formación Card -->
                     <a href="formacion.html">
                     <div class="card formacion">
-                        <img src="assets/Landingpage.svg" alt="Formación Image" class="card-image">
                         <h3>Formación</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
@@ -109,7 +109,6 @@
                     <!-- Consumo Card -->
                     <a href="consumo.html">
                     <div class="card consumo">
-                        <img src="assets/Landingpage.svg" alt="Consumo Image" class="card-image">
                         <h3>Consumo local y consciente</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
@@ -161,7 +160,7 @@
                 </section>
 
                 <!-- Banner 3: After Conocenos (FF8080) -->
-                <div class="moving-banner" style="background-color: #FF8080;">
+                <div class="moving-banner" style="background-color: #145A32;">
                     <div class="banner-text">
                         <ul>
                             <li>AMIGAS</li>
@@ -199,9 +198,11 @@
                     <a href="/visitanos.html" class="cta-button">Mostrar Ubicación</a>
                 </div>
             </section>
+            <!-- Footer Section -->
+             <section clasas="full-section-wrapper">
+                <footer id="footer-placeholder"></footer>
+             </section>
         </section>
     </div>
-    <div id="footer-placeholder"></div>
-    <!-- Footer Section -->
 </body>
 </html>
