--- a/index.html
+++ b/index.html
@@ -15,18 +15,15 @@
     <div id="header-placeholder"></div>
 
     <!-- Main Container for Snap Scrolling -->
-    <div class="main-container">
-        <section class="full-section-wrapper">
-            <!-- Hero Full Section -->
-            <section class="full-section hero-full">
+    <main>
+        <section class="full-section-wrapper" id="hero-text">
                 <!-- Hero Section -->
-                <section class="main-hero container">
+                <container class="main-hero container">
                     <div class="main-hero-content">
-                        <!-- Right Side: Text Content -->
                         <div class="main-hero-text">
-                            <h1>¡BIENVENIDXS A KEF</h1>
-                            <p>Somos una comunidad de mujeres que impulsa la equidad de género y la justicia ambiental en Cali y la región pacífica. Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario). ¡Así que súmate a esta historia! KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
-                            <section class="main-hero-social-container">
+                            <h1>BIENVENIDXS A KEF</h1>
+                            <p>Somos una comunidad de mujeres que impulsa la equidad de género y la justicia ambiental en Cali y la región pacífica.<br><br> Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario).<br><br> ¡Así que súmate a esta historia! <br>KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
+                            <container class="main-hero-social-container">
                                 <div class="footer-social">
                                     <a href="https://facebook.com" target="_blank">
                                         <img src="assets/icons/facebook-icon.svg" alt="Facebook">
@@ -47,49 +44,45 @@
                                         <img src="assets/icons/tiktok-icon.svg" alt="YouTube">
                                     </a>
                                 </div>
-                            </section>
+                            </container>
                         </div>
-                        <section class="full-section-wrapper">
-                        <!-- Bottom: Image or Design -->
-                        <div class="main-hero-image">
-                            <img src="assets/womensmarch.jpg" alt="Hero Image">
-                        </div>
-                        </section>
-
                     </div>
-                </section>
-
-                <!-- Banner 1: After Hero (99CC33) -->
-                <div class="moving-banner" style="background-color: #8E44AD;">
-                    <div class="banner-text">
-                        <ul>
-                            <li>AMIGAS</li>
-                            <li>HERMANAS</li>
-                            <li>HIJAS</li>
-                            <li>PARCERAS</li>
-                            <li>COMPAÑERES</li>
-                            <li>CONOCE KEF</li>
-                            <li>MADRES</li>
-                            <li>ALIADAS</li>
-                            <li>AMIGAS</li>
-                            <li>HERMANAS</li>
-                            <li>HIJAS</li>
-                            <li>PARCERAS</li>
-                            <li>COMPAÑERES</li>
-                            <li>CONOCE KEF</li>
-                            <li>MADRES</li>
-                            <li>ALIADAS</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
+                </container>
         </section>
-
+        <section class="full-section-wrapper main-hero-image" id="hero-image">
+        <!-- Bottom: Image or Design -->
+            <div class="main-hero-image">
+                <img src="assets/Borondo.jpeg" alt="Hero Image">
+            </div>
+            <!-- Banner 1: After Hero (99CC33) -->
+            <div class="moving-banner" style="background-color: #8E44AD;">
+                <div class="banner-text">
+                    <ul>
+                        <li>AMIGAS</li>
+                        <li>HERMANAS</li>
+                        <li>HIJAS</li>
+                        <li>PARCERAS</li>
+                        <li>COMPAÑERES</li>
+                        <li>CONOCE KEF</li>
+                        <li>MADRES</li>
+                        <li>ALIADAS</li>
+                        <li>AMIGAS</li>
+                        <li>HERMANAS</li>
+                        <li>HIJAS</li>
+                        <li>PARCERAS</li>
+                        <li>COMPAÑERES</li>
+                        <li>CONOCE KEF</li>
+                        <li>MADRES</li>
+                        <li>ALIADAS</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
         <section class="full-section-wrapper">
             <!-- Cards Full Section -->
-            <section class="full-section cards-full">
+            <container class="full-section cards-full">
                 <!-- Carousel Section -->
-                <section class="card-container">
+                <container class="card-container">
                     <!-- Activismo Card -->
                     <a href="activismo.html">
                     <div class="card activismo">
@@ -113,7 +106,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                     </a>
-                </section>
+                </container>
 
                 <!-- Banner 2: After Carousel (D9A9FB) -->
                 <div class="moving-banner" style="background-color: #D9A9FB;">
@@ -136,10 +129,7 @@
                         </ul>
                     </div>
                 </div>
-            </section>
-        </section>
-
-        <section class="full-section-wrapper">
+            </container>
             <!-- Know Us Full Section -->
             <section class="full-section conocenos-full">
                 <!-- Know Us Section -->
@@ -181,9 +171,7 @@
                     </div>
                 </div>
             </section>
-        </section>
-        <section class="full-section-wrapper">
-        <!-- Visit Us Section -->
+            <!-- Visit Us Section -->
             <section id="visitanos" class="visitanos-section">
                 <!-- Left Side: Image -->
                 <div class="visitanos-image">
@@ -199,10 +187,9 @@
                 </div>
             </section>
             <!-- Footer Section -->
-             <section clasas="full-section-wrapper">
-                <footer id="footer-placeholder"></footer>
-             </section>
         </section>
-    </div>
+        <!-- Footer Section -->
+        <div id="footer-placeholder"></div>
+    </main>
 </body>
 </html>
