most landing page finished - animations pending

--- a/header.html
+++ b/header.html
@@ -11,10 +11,9 @@
         </label>
         <ul class="nav-links">
             <li><a href="sumate.html">Sumate</a></li>
-            <li><a href="visitanos.html">Visitanos</a></li>
             <li><a href="contact-us.html">Contactanos</a></li>
             <li><a href="intervenciones.html">No te lo pierdas</a></li>
-            <li><a href="blog.html">Voz KEF</a></li>
+            <li><a href="blog.html">Blog KEF</a></li>
             <li><a href="calendar.html">Lo que se viene</a></li>
             <li><a href="dona.html">Apoyanos</a></li>
         </ul>
