responsive design finished for iPhone 5/SE

--- a/about-us.html
+++ b/about-us.html
@@ -11,23 +11,26 @@
 <body>
 
     <div id="header-placeholder"></div>
-
-    <!-- Hero Section -->
-    <section class="about-section">
-        <h1>Conócenos</h1>
-        <p>Learn more about who we are and what we do at KEF.</p>
-    </section>
-
-    <!-- About Content -->
-    <section class="about-text">
-        <h2>Our Mission</h2>
-        <p>KEF is committed to creating social change through activism, education, and sustainable practices. We aim to connect communities and foster a better tomorrow.</p>
-
-        <h2>Our Team</h2>
-        <p>Meet the passionate individuals behind KEF who are driving our mission forward.</p>
-    </section>
-
-    <div id="footer-placeholder"></div>
-
+    <main>
+        <section class="full-section-wrapper about-us">
+            <!-- Hero Section -->
+            <container class="about-section">
+                <h1>Historia de una Juntanza</h1>
+                <p>¡Bienvenidxs a KEF, la Comunidad Ecofeminista!</p>
+                <p>KEF es un sueño compartido con nuestras familias, amigas, colegas y con toda la gente que, como nosotras, quiere un mundo más justo con todos los seres que habitamos en el.<br><br>
+                Todo empezó el 24 de septiembre de 2023, cuando abrimos las puertas de este espacio con el firme propósito de aportar a causas feministas y ecológicas en la ciudad. Desde entonces, no hemos parado de crecer ni de meterle ganas para hacer de Cali un lugar con más justicia ambiental y equidad de género.<br><br>
+                KEF nació cuando dos iniciativas independientes (Komoniu y Be Feminist) decidieron unir fuerzas. ¿Y quiénes estaban detrás? Pues dos hermanas caleñas con el firme convencimiento de que juntas llegamos más lejos, sobre todo cuando trabajamos por el cuidado de la vida. Desde entonces, nos hemos dedicado a educar, crear comunidad y poner en práctica la sostenibilidad, la economía circular, el amor por el planeta y, por supuesto, los feminismos.<br><br>
+                Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario). ¡Así que súmate a esta historia! KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
+            </container>
+            <!-- About Content -->
+            <container class="about-text">
+                <h2>Nuestra misión </h2>
+                <p>Queremos cambiar las reglas del juego: reducir las desigualdades de género y construir más justicia ambiental en Cali y el Pacífico Colombiano. ¿Cómo? Creando una comunidad ecofeminista consciente, solidaria y llena de acción, donde la vida siempre esté en el centro.</p>
+                <h2>Our Team</h2>
+                <p>Meet the passionate individuals behind KEF who are driving our mission forward.</p>
+            </container>
+            <div id="footer-placeholder"></div>
+        </section>
+    </main>
 </body>
 </html>
