--- a/activismo.html
+++ b/activismo.html
@@ -12,48 +12,45 @@
 
     <!-- Header Section -->
     <div id="header-placeholder"></div>
-
-    <!-- Hero Section -->
-    <section class="hero-activismo">
-        <div class="hero-content">
-            <div class="hero-text">
-                <h1>Activismo</h1>
-                <p>Únete a nuestros programas de activismo social para impulsar un cambio significativo.</p>
-                <a href="contact-us.html" class="cta-button-activismo">Contáctanos</a>
+    <section class="full-section-wrapper">
+        <!-- Hero Section -->
+        <container class="hero-activismo">
+            <div class="hero-content">
+                <div class="hero-text">
+                    <h1>Activismo</h1>
+                    <p>Únete a nuestros programas de activismo social para impulsar un cambio significativo.</p>
+                    <a href="contact-us.html" class="cta-button-activismo">Contáctanos</a>
+                </div>
             </div>
-            <div class="hero-image">
-                <img src="assets/Landingpage.svg" alt="Activismo Image">
+        </container>
+
+        <!-- Interventions Section -->
+        <container class="interventions interventions-activismo" id="interventions-list">
+            <h2 class="interventions-title">Intervenciones</h2>
+            <!-- Las intervenciones se renderizarán aquí mediante JavaScript -->
+            <div id="interventions-container"></div>
+        </container>
+
+        
+        <!-- Community and Allies Section -->
+        <container class="allies">
+            <h2>Comunidad y Red de Aliadas</h2>
+            <div class="allies-grid">
+                <div class="ally-card">
+                    <img src="ally1.jpg" alt="Aliada 1">
+                    <h3>Aliada</h3>
+                    <p>Descripción breve de la aliada y su rol en la comunidad.</p>
+                </div>
+                <!-- Agrega más tarjetas de aliadas según sea necesario -->
             </div>
-        </div>
-    </section>
+        </container>
 
-    <!-- Interventions Section -->
-    <section class="interventions interventions-activismo" id="interventions-list">
-        <h2 class="interventions-title">Intervenciones</h2>
-        <!-- Las intervenciones se renderizarán aquí mediante JavaScript -->
-        <div id="interventions-container"></div>
+        <!-- Blog CTA Section -->
+        <container class="blog-cta">
+            <h2>Descubre Nuestro Espacio de Reflexión</h2>
+            <a href="blog.html?topic=activismo" class="cta-button-activismo">Activismo en nuestro Blog</a>
+        </container>
     </section>
-
-    
-    <!-- Community and Allies Section -->
-    <section class="allies">
-        <h2>Comunidad y Red de Aliadas</h2>
-        <div class="allies-grid">
-            <div class="ally-card">
-                <img src="ally1.jpg" alt="Aliada 1">
-                <h3>Aliada</h3>
-                <p>Descripción breve de la aliada y su rol en la comunidad.</p>
-            </div>
-            <!-- Agrega más tarjetas de aliadas según sea necesario -->
-        </div>
-    </section>
-
-    <!-- Blog CTA Section -->
-    <section class="blog-cta">
-        <h2>Descubre Nuestro Espacio de Reflexión</h2>
-        <a href="blog.html?topic=activismo" class="cta-button-activismo">Activismo en nuestro Blog</a>
-    </section>
-
     <!-- Footer Section -->
     <div id="footer-placeholder"></div>
 
