--- a/blog.html
+++ b/blog.html
@@ -14,31 +14,31 @@
 
     <!-- Blog Section with Filters -->
     <section class="blog">
-        <h1>Our Blog</h1>
-        <p>Explore our latest posts on various topics. Use the filters to find what you're looking for!</p>
+        <h1>Blog KEF</h1>
+        <p>Explora nuestras últimas publicaciones en diversos temas. Usa los filtros para encontrar lo que buscas</p>
 
         <!-- Blog Filters -->
         <div class="blog-filters">
-            <label for="filter-topic">Filter by Topic:</label>
+            <label for="filter-topic">Filtrar por tema:</label>
             <select id="filter-topic">
-                <option value="all">All</option>
+                <option value="all">Todas las publicaciones</option>
                 <option value="activismo">Activismo</option>
                 <option value="formacion">Formación e Intervención</option>
                 <option value="consumo">Consumo Local y Consciente</option>
             </select>
 
-            <label for="filter-date">Filter by Date:</label>
+            <label for="filter-date">Filtrar por fecha:</label>
             <input type="date" id="filter-date">
 
-            <label for="filter-keywords">Search by Keywords:</label>
-            <input type="text" id="filter-keywords" placeholder="Enter keywords">
+            <label for="filter-keywords">Buscar por palabras clave:</label>
+            <input type="text" id="filter-keywords" placeholder="Escribe las palabras clave">
 
-            <label for="filter-comments">Filter by Comments:</label>
+            <label for="filter-comments">Filtrar por número de comentarios:</label>
             <select id="filter-comments">
-                <option value="all">All</option>
-                <option value="0-10">0-10 Comments</option>
-                <option value="11-50">11-50 Comments</option>
-                <option value="50+">More than 50 Comments</option>
+                <option value="all">Todos</option>
+                <option value="0-10">0-10 Comentarios</option>
+                <option value="11-50">11-50 Comentarios</option>
+                <option value="50+">Más de 50 Comentarios</option>
             </select>
         </div>
 
@@ -48,19 +48,19 @@
             <div class="blog-entry" data-topic="activismo" data-date="2023-10-01" data-comments="30">
                 <h2><a href="#">Activismo: Our Latest Efforts</a></h2>
                 <p>Explore our activism initiatives and how we contribute to social change.</p>
-                <p class="meta">Date: October 1, 2023 | Reading Time: 5 min | Comments: 30</p>
+                <p class="meta">Fecha: October 1, 2023 | Tiempo de Lectura: 5 min | Comentarios: 30</p>
             </div>
 
             <div class="blog-entry" data-topic="formacion" data-date="2023-09-15" data-comments="15">
                 <h2><a href="#">Formación e Intervención: Training for Change</a></h2>
                 <p>Discover how our training programs are fostering a better future through active interventions.</p>
-                <p class="meta">Date: September 15, 2023 | Reading Time: 7 min | Comments: 15</p>
+                <p class="meta">Fecha: September 15, 2023 | Tiempo de Lectura: 7 min | Comentarios: 15</p>
             </div>
 
             <div class="blog-entry" data-topic="consumo" data-date="2023-09-20" data-comments="5">
                 <h2><a href="#">Consumo Local y Consciente: Promoting Sustainability</a></h2>
                 <p>Learn how local and sustainable consumption can help drive positive change.</p>
-                <p class="meta">Date: September 20, 2023 | Reading Time: 4 min | Comments: 5</p>
+                <p class="meta">Fecha: September 20, 2023 | Tiempo de Lectura: 4 min | Comentarios: 5</p>
             </div>
 
             <!-- More blog entries here -->
