--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </div>
                 </container>
                     <!--Banner 2: After Carousel (D9A9FB) -->
-                    <div class="moving-banner" style="background-color: #145A32;">
+                    <div class="moving-banner" style="background-color: #017935;">
                         <div class="banner-text-b">
                             <ul>
                                 <li>AMIGAS</li>
@@ -152,37 +152,39 @@
                         </div>
                     </div>
             </container>
-            <!-- Visit Us Section -->
-            <container id="contactanos" class="full-section contactanos-full">
-                <!-- Right Side: Text and CTA -->
-                <div class="contactanos-text">
-                    <h2>Contáctanos</h2>
-                    <p>Conoce nuestras instalaciones y descubre cómo puedes ser parte de nuestras actividades en persona.</p>
-                    <p>¡Te esperamos con los brazos abiertos!</p>
-                    <a href="/contact-us.html" class="cta-button">Mostrar Ubicación</a>
-                </div>
-            </container>
-                <!-- Banner 3: After Conocenos (FF8080) -->
-                <div class="moving-banner" style="background-color: #ff4545;">
-                    <div class="banner-text">
-                        <ul>
-                            <li>AMIGAS</li>
-                            <li>HERMANAS</li>
-                            <li>HIJAS</li>
-                            <li>PARCERAS</li>
-                            <li>CONOCE KEF</li>
-                            <li>MADRES</li>
-                            <li>ALIADAS</li>
-                            <li>AMIGAS</li>
-                            <li>HERMANAS</li>
-                            <li>HIJAS</li>
-                            <li>PARCERAS</li>
-                            <li>CONOCE KEF</li>
-                            <li>MADRES</li>
-                            <li>ALIADAS</li>
-                        </ul>
+            <container class="full-section contactanos-full">
+                <!-- Contactanos Section -->
+                <container class="contactanos-section">
+                    <!-- Right Side: Text and CTA -->
+                    <div class="contactanos-text">
+                        <h2>Contáctanos</h2>
+                        <p>Conoce nuestras instalaciones y descubre cómo puedes ser parte de nuestras actividades en persona.</p>
+                        <p>¡Te esperamos con los brazos abiertos!</p>
+                        <a href="/contact-us.html" class="cta-button">Acércate</a>
                     </div>
-                </div>
+                </container>
+                    <!-- Banner 3: After Conocenos (FF8080) -->
+                    <div class="moving-banner" style="background-color: #ff4545;">
+                        <div class="banner-text">
+                            <ul>
+                                <li>AMIGAS</li>
+                                <li>HERMANAS</li>
+                                <li>HIJAS</li>
+                                <li>PARCERAS</li>
+                                <li>CONOCE KEF</li>
+                                <li>MADRES</li>
+                                <li>ALIADAS</li>
+                                <li>AMIGAS</li>
+                                <li>HERMANAS</li>
+                                <li>HIJAS</li>
+                                <li>PARCERAS</li>
+                                <li>CONOCE KEF</li>
+                                <li>MADRES</li>
+                                <li>ALIADAS</li>
+                            </ul>
+                        </div>
+                    </div>
+            </container>
             <!-- Footer Section -->
         </section>
         <!-- Footer Section -->
