--- a/sumate.html
+++ b/sumate.html
@@ -25,30 +25,30 @@
         <p>El activismo es una de nuestras principales líneas de acción. Al unirte, coordinarás y participarás en actividades de movilización, concienciación, y defensa de los derechos humanos.</p>
         <p><strong>Actividades:</strong> Manifestaciones, campañas en redes sociales, charlas y talleres.</p>
         <p><strong>Foco principal:</strong> Generar un cambio social a través de la movilización y la concienciación.</p>
-        <a href="activismo.html" class="cta-button">Más Información sobre Activismo</a>
+        <a href="activismo.html" class="cta-button" style="background-color: #D9A9FB;">Más Información sobre Activismo</a>
     </section>
 
     <!-- Formación e Intervención Section -->
     <section class="line-of-work">
-        <h2>Formación e Intervención</h2>
+        <h2>Formación</h2>
         <p>Formar a la próxima generación de líderes sociales y realizar intervenciones directas en comunidades es parte fundamental de nuestra misión. Al unirte, coordinarás talleres, capacitaciones, y programas de intervención.</p>
         <p><strong>Actividades:</strong> Talleres, cursos, programas de formación, y proyectos de intervención comunitaria.</p>
         <p><strong>Foco principal:</strong> Capacitar y empoderar a las comunidades para generar un impacto sostenible.</p>
-        <a href="formacion.html" class="cta-button">Más Información sobre Formación e Intervención</a>
+        <a href="formacion.html" class="cta-button" style="background-color: #FF8080;">Más Información sobre Formación</a>
     </section>
 
     <!-- Consumo Local y Consciente Section -->
     <section class="line-of-work">
-        <h2>Consumo Local y Consciente</h2>
+        <h2>Colaboración</h2>
         <p>Apoyar el consumo responsable y sostenible a nivel local es parte de nuestro trabajo. Al unirte, coordinarás campañas de concienciación y eventos que promueven prácticas de consumo consciente.</p>
         <p><strong>Actividades:</strong> Campañas educativas, ferias locales, y alianzas con productores sostenibles.</p>
         <p><strong>Foco principal:</strong> Fomentar el consumo local y las prácticas sostenibles que respetan el medio ambiente.</p>
-        <a href="consumo.html" class="cta-button">Más Información sobre Consumo Local y Consciente</a>
+        <a href="consumo.html" class="cta-button" style="background-color: #99CC33;">Más Información sobre Colaboración</a>
     </section>
 
     <!-- Join Us CTA Section -->
     <section class="join-cta">
-        <h2>¿Listo para Unirte?</h2>
+        <h2>¿Listx para Unirte?</h2>
         <p>Si estás interesado en unirte a alguna de nuestras líneas de acción, completa el formulario y nos pondremos en contacto contigo.</p>
         <a href="contact-us.html" class="cta-button">Únete Ahora</a>
     </section>
