--- a/dona.html
+++ b/dona.html
@@ -11,52 +11,43 @@
 
     <div id="header-placeholder"></div>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>Haz Tu Donación</h1>
-        <p>Contribuye a nuestra causa mediante donaciones de ropa o aportes financieros. Cada donación ayuda a mejorar la vida de aquellos que más lo necesitan.</p>
-    </section>
+    <main>
+        <!-- Hero Section -->
+        <section class="hero-content hero-donations">
+            <h1>Haz Tu Donación</h1>
+            <p>Contribuye a nuestra causa mediante donaciones de ropa o aportes financieros. Cada donación ayuda a mejorar la vida de aquellos que más lo necesitan.</p>
+        </section>
 
-    <!-- Clothing Donations Section -->
-    <section class="donations-section">
-        <div class="donations-content">
-            <!-- Left Side: Text Content -->
-            <div class="donations-text">
-                <h2>Donaciones de Ropa</h2>
-                <p>Ayuda a las comunidades necesitadas donando ropa en buen estado. Aceptamos ropa para todas las edades y estaciones del año. Puedes dejarlas en nuestras sedes o coordinamos una recogida.</p>
-                <ul>
-                    <li>Ropa para adultos y niños</li>
-                    <li>Ropa de invierno y verano</li>
-                    <li>Accesorios: guantes, bufandas, sombreros, etc.</li>
-                </ul>
-                <a href="clothing-donations.html" class="cta-button">Más Información Sobre Donaciones de Ropa</a>
+        <!-- Clothing Donations Section -->
+        <section class="donations-section">
+            <div class="donations-content">
+                <!-- Left Side: Text Content -->
+                <div class="donations-text">
+                    <h2>Donaciones de Ropa</h2>
+                    <p>Ayuda a las comunidades necesitadas donando ropa en buen estado. Aceptamos ropa para todas las edades y estaciones del año. Puedes dejarlas en nuestras sedes o coordinamos una recogida.</p>
+                    <ul>
+                        <li>Ropa para adultos y niños</li>
+                        <li>Ropa de invierno y verano</li>
+                        <li>Accesorios: guantes, bufandas, sombreros, etc.</li>
+                    </ul>
+                    <a href="clothing-donations.html" class="cta-button">Más Información</a>
+                </div>
             </div>
+        </section>
 
-            <!-- Right Side: Placeholder Image (if needed) -->
-            <div class="donations-image">
-                <img src="assets/Landingpage.svg" alt="Imagen de Donaciones de Ropa">
+        <!-- Financial Donations Section -->
+        <section class="donations-section">
+            <div class="donations-content">
+                <!-- Right Side: Text Content -->
+                <div class="donations-text">
+                    <h2>Donaciones Financieras</h2>
+                    <p>Contribuye económicamente para apoyar nuestros programas de activismo, formación, y sostenibilidad. Tu donación financiará actividades, capacitación, y ayuda directa a las comunidades.</p>
+                    <p>Puedes realizar donaciones seguras mediante PayPal o transferencia bancaria.</p>
+                    <a href="financial-donations.html" class="cta-button">Donar Ahora</a>
+                </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Financial Donations Section -->
-    <section class="donations-section">
-        <div class="donations-content">
-            <!-- Left Side: Placeholder Image (if needed) -->
-            <div class="donations-image">
-                <img src="financial-donation.png" alt="Imagen de Donaciones Financieras">
-            </div>
-
-            <!-- Right Side: Text Content -->
-            <div class="donations-text">
-                <h2>Donaciones Financieras</h2>
-                <p>Contribuye económicamente para apoyar nuestros programas de activismo, formación, y sostenibilidad. Tu donación financiará actividades, capacitación, y ayuda directa a las comunidades.</p>
-                <p>Puedes realizar donaciones seguras mediante PayPal o transferencia bancaria.</p>
-                <a href="financial-donations.html" class="cta-button">Donar Ahora</a>
-            </div>
-        </div>
-    </section>
-
+        </section>
+    </main>
     <div id="footer-placeholder"></div>
 
 </body>
