iPad view finished

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <main>
         <section class="full-section-wrapper" id="hero-text">
                 <!-- Hero Section -->
-                <container class="main-hero container">
+                <div class="main-hero container">
                     <div class="main-hero-content">
                         <div class="main-hero-text">
                             <h1>BIENVENIDXS A KEF</h1>
                             <p>Somos una comunidad de mujeres que impulsa la equidad de género y la justicia ambiental en Cali y la región pacífica.<br><br> Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario).<br><br> ¡Así que súmate a esta historia! <br>KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
-                            <container class="main-hero-social-container">
+                            <div class="main-hero-social-container">
                                 <div class="footer-social">
                                     <a href="https://facebook.com" target="_blank">
                                         <img src="assets/icons/facebook-icon.svg" alt="Facebook">
@@ -44,10 +44,10 @@
                                         <img src="assets/icons/tiktok-icon.svg" alt="YouTube">
                                     </a>
                                 </div>
-                            </container>
+                            </div>
                         </div>
                     </div>
-                </container>
+                </div>
         </section>
         <section class="full-section-wrapper main-hero-image" id="hero-image">
         <!-- Bottom: Image or Design -->
@@ -80,13 +80,13 @@
         </section>
         <section class="full-section-wrapper">
             <!-- Cards Full Section -->
-            <container class="full-section cards-full">
-                <container class="text-cards">
+            <div class="full-section cards-full">
+                <div class="text-cards">
                     <h2> Compromiso KEF </h2>
                     <p>En KEF trabajamos para construir un mundo más justo desde el ecofeminismo. Nuestra apuesta se basa en educación, activismo y colaboración, tres pilares que nos permiten transformar realidades desde lo colectivo.</p>
-                </container>
+                </div>
                 <!-- Carousel Section -->
-                <container class="card-container">
+                <div class="card-container">
                     <!-- Activismo Card -->
                     <a href="activismo.html">
                     <div class="card activismo">
@@ -110,17 +110,17 @@
                         <p>No estamos solas en esto. Trabajamos de la mano con otras organizaciones y proyectos afines para potenciar nuestro impacto. Creemos en el poder de la comunidad y en que, uniendo fuerzas, podemos lograr grandes cambios.</p>
                     </div>
                     </a>
-                </container>
-                <container class="cta-cards">
+                </div>
+                <div class="cta-cards">
                     <p>Juntas, hacemos que las cosas pasen.</p> 
                     <p><a href="sumate.html">¡Súmate a KEF y hagamos historia!</a></p>
-                </container>
+                </div>
 
-            </container>
+            </div>
             <!-- Know Us Full Section -->
-            <container class="full-section conocenos-full">
+            <div class="full-section conocenos-full">
                 <!-- Know Us Section -->
-                <container id="conocenos" class="conocenos-section">
+                <div id="conocenos" class="conocenos-section">
                     <!-- Left Side: Text and CTA -->
                     <div class="conocenos-text">
                         <h2>Conócenos</h2>
@@ -129,7 +129,7 @@
                         <p>Únete a nosotros para marcar la diferencia.</p>
                         <a href="about-us.html" class="cta-button">Más Info</a>
                     </div>
-                </container>
+                </div>
                     <!--Banner 2: After Carousel (D9A9FB) -->
                     <div class="moving-banner" style="background-color: #017935;">
                         <div class="banner-text-b">
@@ -151,10 +151,10 @@
                             </ul>
                         </div>
                     </div>
-            </container>
-            <container class="full-section contactanos-full">
+            </div>
+            <div class="full-section contactanos-full">
                 <!-- Contactanos Section -->
-                <container class="contactanos-section">
+                <div class="contactanos-section">
                     <!-- Right Side: Text and CTA -->
                     <div class="contactanos-text">
                         <h2>Contáctanos</h2>
@@ -162,29 +162,29 @@
                         <p>¡Te esperamos con los brazos abiertos!</p>
                         <a href="/contact-us.html" class="cta-button">Acércate</a>
                     </div>
-                </container>
-                    <!-- Banner 3: After Conocenos (FF8080) -->
-                    <div class="moving-banner" style="background-color: #ff4545;">
-                        <div class="banner-text">
-                            <ul>
-                                <li>AMIGAS</li>
-                                <li>HERMANAS</li>
-                                <li>HIJAS</li>
-                                <li>PARCERAS</li>
-                                <li>CONOCE KEF</li>
-                                <li>MADRES</li>
-                                <li>ALIADAS</li>
-                                <li>AMIGAS</li>
-                                <li>HERMANAS</li>
-                                <li>HIJAS</li>
-                                <li>PARCERAS</li>
-                                <li>CONOCE KEF</li>
-                                <li>MADRES</li>
-                                <li>ALIADAS</li>
-                            </ul>
-                        </div>
+                </div>
+                <!-- Banner 3: After Conocenos (FF8080) -->
+                <div class="moving-banner" style="background-color: #ff4545;">
+                    <div class="banner-text">
+                        <ul>
+                            <li>AMIGAS</li>
+                            <li>HERMANAS</li>
+                            <li>HIJAS</li>
+                            <li>PARCERAS</li>
+                            <li>CONOCE KEF</li>
+                            <li>MADRES</li>
+                            <li>ALIADAS</li>
+                            <li>AMIGAS</li>
+                            <li>HERMANAS</li>
+                            <li>HIJAS</li>
+                            <li>PARCERAS</li>
+                            <li>CONOCE KEF</li>
+                            <li>MADRES</li>
+                            <li>ALIADAS</li>
+                        </ul>
                     </div>
-            </container>
+                </div>
+            </div>
             <!-- Footer Section -->
         </section>
         <!-- Footer Section -->
