--- a/activismo.html
+++ b/activismo.html
@@ -14,7 +14,7 @@
     <div id="header-placeholder"></div>
     <section class="full-section-wrapper">
         <!-- Hero Section -->
-        <container class="hero-activismo">
+        <div class="hero-activismo">
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Activismo</h1>
@@ -22,34 +22,33 @@
                     <a href="contact-us.html" class="cta-button-activismo">Contáctanos</a>
                 </div>
             </div>
-        </container>
+        </div>
 
         <!-- Interventions Section -->
-        <container class="interventions interventions-activismo" id="interventions-list">
+        <div class="interventions interventions-activismo" id="interventions-list">
             <h2 class="interventions-title">Intervenciones</h2>
             <!-- Las intervenciones se renderizarán aquí mediante JavaScript -->
             <div id="interventions-container"></div>
-        </container>
+        </div>
 
         
         <!-- Community and Allies Section -->
-        <container class="allies">
+        <div class="allies">
             <h2>Comunidad y Red de Aliadas</h2>
             <div class="allies-grid">
                 <div class="ally-card">
-                    <img src="ally1.jpg" alt="Aliada 1">
                     <h3>Aliada</h3>
                     <p>Descripción breve de la aliada y su rol en la comunidad.</p>
                 </div>
                 <!-- Agrega más tarjetas de aliadas según sea necesario -->
             </div>
-        </container>
+        </div>
 
         <!-- Blog CTA Section -->
-        <container class="blog-cta">
+        <div class="blog-cta">
             <h2>Descubre Nuestro Espacio de Reflexión</h2>
             <a href="blog.html?topic=activismo" class="cta-button-activismo">Activismo en nuestro Blog</a>
-        </container>
+        </div>
     </section>
     <!-- Footer Section -->
     <div id="footer-placeholder"></div>
