--- a/contact-us.html
+++ b/contact-us.html
@@ -13,12 +13,11 @@
     <div id="header-placeholder"></div>
     <main>
         <section class="full-section-wrapper contact-us">
-            <container class="contact-form-container">
+            <div class="contact-form-container">
                 <!-- Contact Section -->
-                <container class="contact-form">
+                <div class="contact-form">
                     <h1>Contáctanos</h1>
                     <p>Queremos leerte! Por favor escríbenos para cualquier duda que quieras aclarar o consulta que quieras hacer</p>
-
                     <form action="/submit-form" method="POST">
                         <label for="name">Nombre</label>
                         <input type="text" id="name" name="name" required>
@@ -34,28 +33,28 @@
 
                         <button type="submit">Enviar Mensaje</button>
                     </form>
-                </container>
-            </container>
-            <container class="hero-visitanos">
+                </div>
+            </div>
+            <div class="hero-visitanos">
                 <h1>Visítanos</h1>
                 <p>Nuestra sede está ubicada en el corazón de Cali.</p>
                 <p>Ven a conocernos y participa en nuestras actividades y eventos comunitarios.</p>
-            </container>
+            </div>
 
             <!-- Google Maps Embed -->
-            <container class="visit-map">
+            <div class="visit-map">
                 <h2>Encuéntranos Aquí</h2>
                 <p>Av. 4 Norte #8 Norte-37, Granada, Cali, Valle del Cauca, Colombia</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1820.1592157975886!2d-76.53744381370562!3d3.454043429954235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30a66fc36a640d%3A0x6026132b68b07ada!2sAv.%204%20Nte.%20%238%20Norte-37%2C%20Granada%2C%20Cali%2C%20Valle%20del%20Cauca%2C%20Colombia!5e1!3m2!1sen!2sca!4v1729712396241!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </container>
+            </div>
 
             <!-- Contact Details -->
-            <container class="visit-contact">
+            <div class="visit-contact">
                 <h2>Detalles de Contacto</h2>
                 <p><strong>Dirección:</strong> Av. 4 Norte #8 Norte-37, Granada, Cali, Valle del Cauca, Colombia</p>
                 <p><strong>Teléfono:</strong> +123 456 7890</p>
                 <p><strong>Email:</strong> info@kef.org</p>
-            </container>
+            </div>
         </section>
     </main>
     <div id="footer-placeholder"></div>
