All resolutions finished

--- a/dona.html
+++ b/dona.html
@@ -15,7 +15,7 @@
         <!-- Hero Section -->
         <section class="hero-content hero-donations">
             <h1>Haz Tu Donación</h1>
-            <p>Contribuye a nuestra causa mediante donaciones de ropa o aportes financieros. Cada donación ayuda a mejorar la vida de aquellos que más lo necesitan.</p>
+            <p>Contribuye a nuestra causa mediante donaciones de ropa o aportes financieros.<br> Cada donación ayuda a mejorar la vida de aquellos que más lo necesitan.</p>
         </section>
 
         <!-- Clothing Donations Section -->
