--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <h1>BIENVENIDXS A KEF</h1>
                             <p>Somos una comunidad de mujeres que impulsa la equidad de género y la justicia ambiental en Cali y la región pacífica.<br><br> Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario).<br><br> ¡Así que súmate a esta historia! <br>KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
                             <div class="main-hero-social-container">
-                                <div class="footer-social">
+                                <div class="footer-social social-hero">
                                     <a href="https://facebook.com" target="_blank">
                                         <img src="assets/icons/facebook-icon.svg" alt="Facebook">
                                     </a>
@@ -51,7 +51,7 @@
         </section>
         <section class="full-section-wrapper main-hero-image" id="hero-image">
         <!-- Bottom: Image or Design -->
-            <div class="main-hero-image">
+            <div>
                 <img src="assets/Borondo.jpeg" alt="Hero Image">
             </div>
             <!-- Banner 1: After Hero (99CC33) -->
